[package]
name = "ahijor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tera = "1.19.1"
pulldown-cmark = "0.10.0"
tempfile = "3.10.0"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tokio-stream = { version = "0.1.14", features = ["fs", "sync"] }
hyper-staticfile = "0.10"
tower-http = { version = "0.5.2", features = ["full"] }
notify = "6.1.1"
async-stream = "0.3.5"
futures-util = "0.3.30"
anyhow = "1.0.81"
reqwest = { version = "0.12.0", features = ["blocking"] }
